[package]
name = "glfw-wrapper"
version = "0.1.2"
authors = ["MinusKelvin <me@minuskelvin.net>"]
description = "A safe and thin wrapper around the [GLFW] window and context creation library."
repository = "https://github.com/MinusKelvin/glfw-wrapper.git"
readme = "README.md"
keywords = ["glfw", "windowing", "opengl"]
license = "MIT"

[dependencies]
libc = "0.2"
enum_primitive = "0.1"
bitflags = "1.0"
scopeguard = "0.3"

[dependencies.glfw-sys]
git = "https://github.com/MinusKelvin/glfw-sys"
version = "3.3"
